# sparkly

./: .gitignore  LICENSE  README.md  py-modindex.html  pyproject.toml  requirements.txt
_sources/: sparkly.index.rst.txt
doc/: case-studies-n-performance-stats.md  conf.py  gen_docs.sh  install-cluster-machines.md  install-java-jcc-pylucene.md  install-single-machine-docker.md  install-single-machine-jupyter-notebook.md  install-single-machine-linux.md  install-single-machine-macOS.md  install-single-machine-otherOS.md  install-single-machine-windowsOS.md  install-single-machine.md  note-on-input-sparkly-delex.md  sparkly.rst  using-sparkly.md  why-pylucene.md
doc/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  sparkly.doctree  sparkly.index.doctree  sparkly.index_optimizer.doctree  sparkly.query_generator.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sparkly.html  sparkly.index.html  sparkly.index_optimizer.html  sparkly.query_generator.html
doc/_build/html/_sources/: sparkly.index_optimizer.rst.txt
doc/_build/latex/: Sparkly.aux  Sparkly.fdb_latexmk  Sparkly.fls  Sparkly.ilg  Sparkly.tex
doc/api/: Makefile  conf.py  gen_docs.sh  index.rst  sparkly.query_generator.rst
doc/api/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  sparkly.doctree  sparkly.index.doctree  sparkly.index_optimizer.doctree  sparkly.query_generator.doctree
doc/api/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sparkly.html  sparkly.index.html  sparkly.index_optimizer.html  sparkly.query_generator.html
doc/api/_build/html/_sources/: modules.rst.txt  sparkly.rst.txt
examples/: README.md  basic_example.py  candidates.parquet  concat_example.py  example.ipynb  example.py  example_delete.py  example_delete_reinsert.py  local_example.py  pandas_example.py  sparkly_auto.py  sparkly_manual.py
examples/data/abt_buy/: gold.parquet  table_a.parquet  table_b.parquet
examples/data/dblp_acm/: gold.parquet  table_a.parquet  table_b.parquet
experiments/: README.md  auto.py  manual.py
sparkly/: analysis.py  search.py  thread_progress.py  thread_progress_bar.py  utils.py
sparkly/index/: __init__.py  index_base.py  index_config.py  lucene_index.py
sparkly/index_optimizer/: __init__.py  attribute_selector.py  index_optimizer.py  query_scorer.py
sparkly/query_generator/: __init__.py  lucene_query_generator.py  lucene_weighted_query_generator.py  query_spec.py
src/sparkly/index/: index_base.py
src/sparkly/query_generator/: query_spec.py
tests/: __init__.py  conftest.py  test_analysis.py  test_index_base.py  test_index_config.py  test_index_optimizer.py  test_lucene_index.py  test_lucene_query_generator.py  test_lucene_weighted_query_generator.py  test_query_scorer.py  test_query_spec.py  test_search.py  test_thread_progress_bar.py  test_utils.py
tips/: pylucene.md
