[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkly"
version = "0.0.0"
dynamic = ["dependencies"]

#dependencies = [
#	"joblib>=1.2.0",
#	"mmh3>=3.0.0",
#	"numba>=0.58.0",
#	"numpy>=1.21.5",
#	"numpydoc>=1.5.0",
#	"pandas>=1.5.2",
#	"psutil>=5.9.0",
#	"pyarrow>=10.0.1",
#	"pyspark>=3.5.0",
#	"scipy>=1.8.0",
#	"tqdm>=4.64.1",
#]

# TODO might need to be 3.10
requires-python = ">= 3.8"

authors = [
	{name = "Derek Paulsen", email = "derekpaulsensi@gmail.com"},
]

description = "Sparkly is a TF/IDF top-k blocking for entity matching system built on top of Apache Spark and PyLucene."

readme = "README.md"
license = {file = "LICENSE"}
# TODO 
#keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
# TODO possibly change to a different page
Homepage = "https://github.com/anhaidgroup/sparkly"
Repository = "https://github.com/anhaidgroup/sparkly.git"
Issues = "https://github.com/anhaidgroup/sparkly/issues"
